Fix width body overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
   display: flex;
   gap: 1rem;
   height: 100vh;
-  width: 100vw;
 }
 
 .sidebar {
