--- a/src/components/Gallery/gallery.module.css
+++ b/src/components/Gallery/gallery.module.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
+    padding: 10px;
 }
 
 .item {
